--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@
 }
 
 div.main {
-    min-height: 90vh;
+    min-height: 93vh;
     background-image: url('../storage/asset/main-bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -33,7 +33,8 @@ div.main {
     background-color: red;
     margin-bottom: 10px;
     border: 1px solid red;
-    width: 75%;
+    width: 70%;
+    margin-bottom: 30px;
 }
 
 .user-desc {
@@ -42,5 +43,6 @@ div.main {
 }
 
 .image-user {
-    margin-left: 200px;
+    display: block;
+    margin: auto;
 }
